# FEBioFUSE

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux-pull-request.yml  linux-push.yml  macos-pull-request.yml  macos-push.yml  windows-pull-request.yml  windows-push.yml
ci/Windows/: publish-to-s3.sh
ci/macOS/: publish-to-s3.sh
docs/: FEBioFuse.docx
examples/: chem.feb  control.xml  mech.feb
src/: DataExchange.cpp  DataExchange.h  DataExchangeList.cpp  DataExchangeList.h  FECoupledSolver.cpp  FECoupledSolver.h  Model.cpp  Model.h  ModelList.cpp  ModelList.h  main.cpp
